some replacements of Guava FluentIterable w/ Java 8 Streams